--- a/src/components/setsPage.scss
+++ b/src/components/setsPage.scss
@@ -3,4 +3,12 @@
 		display: flex;
 		flex-wrap: wrap;
 	}
+
+	.sets-page--header {
+		text-align: center;
+	}
+
+	.sets-page--shuffle-button {
+		margin: 10px;
+	}
 }
