Moved setsPage to src/pages

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,6 @@ body {
 	background: url("../images/parchment.jpg");
 }
 
-@import "components/setsPage";
+@import "pages/setsPage";
 @import "components/setChooser";
 @import "components/setDropdown";
