Renaming setsPage to randomizer

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,6 +18,6 @@ body {
 }
 
 @import "pages/menu";
-@import "pages/setsPage";
+@import "pages/randomizer";
 @import "components/setChooser";
 @import "components/setDropdown";
