Set selection page works

--- a/src/style.scss
+++ b/src/style.scss
@@ -19,5 +19,6 @@ body {
 
 @import "pages/menu";
 @import "pages/randomizer";
+@import "pages/selectBlocks";
 @import "components/setChooser";
 @import "components/setDropdown";
