--- a/src/style.scss
+++ b/src/style.scss
@@ -23,6 +23,7 @@ body {
 }
 
 @import "pages/menu";
+@import "pages/playerSetup";
 @import "pages/randomizer";
 @import "pages/selectBlocks";
 @import "components/setChooser";
