Player info forms show up, non-functional

--- a/src/style.scss
+++ b/src/style.scss
@@ -26,5 +26,7 @@ body {
 @import "pages/playerSetup";
 @import "pages/randomizer";
 @import "pages/selectBlocks";
+@import "components/PlayerControl";
+@import "components/PlayerDropdown";
 @import "components/setChooser";
 @import "components/setDropdown";
