Randomizing characters and starter en masse works

--- a/src/pages/playerSetup.scss
+++ b/src/pages/playerSetup.scss
@@ -1,6 +1,12 @@
 .player-setup {
+	.player-setup--button-bar {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
 	.player-setup--buttons {
-		margin: 20px 0;
+		margin: 20px 10px;
 		text-align: center;
 	}
 }
