--- a/src/style.scss
+++ b/src/style.scss
@@ -25,6 +25,7 @@ body {
 @import "pages/menu";
 @import "pages/playerSetup";
 @import "pages/randomizer";
+@import "pages/scoreTracker";
 @import "pages/selectBlocks";
 @import "components/PlayerControl";
 @import "components/PlayerDropdown";
