Renamed blocks to products

--- a/src/pages/selectProducts.scss
+++ b/src/pages/selectProducts.scss
@@ -1,14 +1,14 @@
-.select-blocks {
+.select-products {
 	margin: auto;
 	max-width: 100%;
 	width: 510px;
 	padding: 20px;
 
-	.select-blocks--button {
+	.select-products--button {
 		margin: 20px 0;
 	}
 
-	.select-blocks--button-icon {
+	.select-products--button-icon {
 		float: left;
 	}
 }
