--- a/src/style.scss
+++ b/src/style.scss
@@ -26,7 +26,7 @@ body {
 @import "pages/playerSetup";
 @import "pages/randomizer";
 @import "pages/scoreTracker";
-@import "pages/selectBlocks";
+@import "pages/selectProducts";
 @import "components/PlayerControl";
 @import "components/PlayerDropdown";
 @import "components/setChooser";
