--- a/src/components/setChooser.scss
+++ b/src/components/setChooser.scss
@@ -13,4 +13,40 @@
 	.set-chooser--shuffle-button {
 		float: right;
 	}
+
+	.set-chooser--header {
+		position: relative;
+		padding-left: 50px;
+
+		&::before {
+			display: block;
+			position: absolute;
+			width: 50px;
+			height: 50px;
+			bottom: -10px;
+			left: 0;
+			content: "";
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+		}
+		&.set-chooser--header__expansion::before {
+			background-image: url("../images/set-expansion.png");
+		}
+		&.set-chooser--header__premium::before {
+			background-image: url("../images/set-premium.png");
+		}
+		&.set-chooser--header__master::before {
+			background-image: url("../images/set-master.png");
+		}
+		&.set-chooser--header__bronze::before {
+			background-image: url("../images/promo-bronze.png");
+		}
+		&.set-chooser--header__silver::before {
+			background-image: url("../images/promo-silver.png");
+		}
+		&.set-chooser--header__gold::before {
+			background-image: url("../images/promo-gold.png");
+		}
+	}
 }
