Presets support and fixing manifest

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,6 +27,7 @@ body {
 
 @import "pages/menu";
 @import "pages/playerSetup";
+@import "pages/presets";
 @import "pages/randomizer";
 @import "pages/scoreTracker";
 @import "pages/selectProducts";
