Adding presets and enabling the presets page

--- a/src/pages/presets.scss
+++ b/src/pages/presets.scss
@@ -10,6 +10,17 @@
 		text-align: center;
 	}
 
+	.presets--player-count {
+		margin-top: 5px;
+		text-align: center;
+	}
+
+	.presets--description {
+		font-style: italic;
+		margin-bottom: 30px;
+		text-align: center;
+	}
+
 	.presets--set-list-header {
 		position: relative;
 		padding-left: 50px;
